Add RWD to language module interface

--- a/collector.html
+++ b/collector.html
@@ -256,36 +256,36 @@
 		<!-- languages -->
 		<section id="languages" class="row section">
 			
-			<form id="formLang" class="col s3">
+			<form id="formLang" class="col s12 m5 l4">
 				<fieldset class="row">
 					<legend>Idioma &lsqb;Nuevo&rsqb;</legend>
 					<input name="indexLang" type="hidden" value="">
-					<div class="input-field col s6">
+					<div class="input-field col s3 m6 l6">
 						<input id="nameLang" name="nameLang" type="text" class="validate" data-length="25" maxlength="25">
 						<label for="nameLang">Nombre</label>
-						<span class="helper-text col s8"></span>
+						<span class="helper-text col s6"></span>
 					</div>
-					<div class="input-field col s6">
+					<div class="input-field col s3 m6 l6">
 						<input id="speakLang" name="speakLang" type="text" class="validate" data-length="3" maxlength="3">
 						<label for="speakLang">&percnt; Habla</label>
 						<span class="helper-text col s8">Ej. 75</span>
 					</div>
-					<div class="input-field col s6">
+					<div class="input-field col s3 m6 l6">
 						<input id="readLang" name="readLang" type="text" class="validate" data-length="3" maxlength="3">
 						<label for="readLang">&percnt; Lee</label>
-						<span class="helper-text col s8">Ej. 100</span>
+						<span class="helper-text col s8">Ej. 80</span>
 					</div>
-					<div class="input-field col s6">
+					<div class="input-field col s3 m6 l6">
 						<input id="writeLang" name="writeLang" type="text" class="validate" data-length="3" maxlength="3">
 						<label for="writeLang">&percnt; Escribe</label>
 						<span class="helper-text col s8">Ej. 50</span>
 					</div>
-					<div class="input-field col s12">
+					<div class="input-field col s12 m12 l12">
 						<div class="row" style="margin-bottom: 0px;">
-							<div class="col s6 left-align">
+							<div class="col s6 m6 l6 left-align">
 								<button id="btnAuxLang" name="btnAuxLang" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 							</div>
-							<div class="col s6 right-align">
+							<div class="col s6 m6 l6 right-align">
 								<button id="btnMainLang" name="btnMainLang" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 				</fieldset>
 			</form>
 
-			<article class="col s6">
+			<article class="col s12 m7 l7">
 				<table id="tableLang" class="highlight centered">
 					<thead>
 						<tr>
@@ -332,10 +332,10 @@
 				<br><br>
 
 				<div class="row">
-					<div class="col s3 left-align">
+					<div class="col s6 m6 l6 left-align">
 						<button id="btnPrevLang" data-tab="courses" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 					</div>
-					<div class="col s3 push-s6 right-align">
+					<div class="col s6 m6 l6 right-align">
 						<button id="btnNextLang" data-tab="skills" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 					</div>
 				</div>
