Add data method in BasicHandler class

--- a/collector.html
+++ b/collector.html
@@ -919,11 +919,10 @@
 	<script type="text/javascript" src="js/lib/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/lib/materialize.min.js"></script>
 
-	<!-- <script type="text/javascript" src="js/helper/table-util.js"></script> -->
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
+	<script type="text/javascript" src="js/helper/validator.js"></script>
 
 	<script type="text/javascript" src="js/base/model.js"></script>
-	<script type="text/javascript" src="js/base/validator.js"></script>
 	<script type="text/javascript" src="js/base/form.js"></script>
 	<script type="text/javascript" src="js/base/table.js"></script>
 	<script type="text/javascript" src="js/handlers/handler.js"></script>
