Add resume generator button

--- a/collector.html
+++ b/collector.html
@@ -699,6 +699,7 @@
 					</div>
 				</div>
 			</div>
+			<br>
 		</section>
 
 
@@ -907,11 +908,12 @@
 					<div class="col s6 m6 l6 right-align">
 						<button id="btnPrevEwe" data-tab="int-work-exp" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 					</div>
-					<!-- <div class="col s6 m6 l6 left-align">
-						<button id="btnNextEwe" data-tab="" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
-					</div> -->
+					<div class="col s6 m6 l6 right-align">
+						<button id="btnGenRes" class="btn waves-effect waves-light red lighten-2 btn-small">Generar CV</button>
+					</div>
 				</div>
 			</div>
+			<br><br>
 		</section>
 		
 	</div><!-- container -->
