Add subtitle to the view

--- a/collector.html
+++ b/collector.html
@@ -10,11 +10,14 @@
 	<div class="container">
 		
 		<!-- title -->
+		<br>
 		<div class="row">
-			<br>
 			<h5>Datos del Candidato</h5>
-			<br><br>
+			<div class="col s12">
+				<h6 id="docId" class="resgen-title">[nombrePM_dd-Mon-yyyy_hh-mm-ss]</h6>
+			</div>
 		</div>
+		<br><br>
 		
 		<!-- tabs -->
 		<div id="wrap-tabs" class="row">
